<resources>
    <string name="app_name">RealmExample</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_new_book">Add New Book</string>
    <string name="update">Update</string>
    <string name="remove">Remove</string>
    <string name="id">id :</string>
    <string name="title">title :</string>
    <string name="author">author :</string>
    <string name="ok">OK</string>
    <string name="detail">Detail</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="remove_book">Remove Book</string>
</resources>